// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/composer/extract extractPackageFile() extracts dependencies with lock file 1`] = `
Object {
  "composerLock": "composer.lock",
  "deps": Array [
    Object {
      "currentValue": ">=5.3.2",
      "datasource": "packagist",
      "depName": "php",
      "depType": "require",
      "lookupName": "php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
      "lookupName": "symfony/assetic-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
      "lookupName": "symfony/monolog-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
      "lookupName": "symfony/swiftmailer-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.1.*",
      "datasource": "packagist",
      "depName": "symfony/symfony",
      "depType": "require",
      "lookupName": "symfony/symfony",
    },
    Object {
      "currentValue": "2.2.2",
      "datasource": "packagist",
      "depName": "doctrine/common",
      "depType": "require",
      "lookupName": "doctrine/common",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
      "lookupName": "doctrine/doctrine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
      "lookupName": "doctrine/doctrine-fixtures-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.2.x-dev",
      "datasource": "packagist",
      "depName": "doctrine/orm",
      "depType": "require",
      "lookupName": "doctrine/orm",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
      "lookupName": "exercise/elastica-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
      "lookupName": "friendsofsymfony/rest-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
      "lookupName": "friendsofsymfony/user-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "fzaninotto/faker",
      "depType": "require",
      "lookupName": "fzaninotto/faker",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.0.1",
      "datasource": "packagist",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
      "lookupName": "jms/di-extra-bundle",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
      "lookupName": "jms/payment-core-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.1.0",
      "datasource": "packagist",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
      "lookupName": "jms/security-extra-bundle",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
      "lookupName": "knplabs/knp-menu-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
      "lookupName": "knplabs/knp-paginator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "liip/imagine-bundle",
      "depType": "require",
      "lookupName": "liip/imagine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "merk/dough-bundle",
      "depType": "require",
      "lookupName": "merk/dough-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
      "lookupName": "sensio/distribution-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
      "lookupName": "sensio/framework-extra-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/generator-bundle",
      "depType": "require",
      "lookupName": "sensio/generator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
      "lookupName": "simplethings/entity-audit-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
      "lookupName": "stof/doctrine-extensions-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "twig/extensions",
      "depType": "require",
      "lookupName": "twig/extensions",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.3.*",
      "datasource": "packagist",
      "depName": "behat/behat",
      "depType": "require-dev",
      "lookupName": "behat/behat",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
      "lookupName": "behat/behat-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
      "lookupName": "behat/mink-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
      "lookupName": "behat/sahi-client",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
      "lookupName": "behat/common-contexts",
      "skipReason": "any-version",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts dependencies with no lock file 1`] = `
Object {
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": ">=5.3.2",
      "datasource": "packagist",
      "depName": "php",
      "depType": "require",
      "lookupName": "php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/assetic-bundle",
      "depType": "require",
      "lookupName": "symfony/assetic-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/monolog-bundle",
      "depType": "require",
      "lookupName": "symfony/monolog-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "symfony/swiftmailer-bundle",
      "depType": "require",
      "lookupName": "symfony/swiftmailer-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.1.*",
      "datasource": "packagist",
      "depName": "symfony/symfony",
      "depType": "require",
      "lookupName": "symfony/symfony",
    },
    Object {
      "currentValue": "2.2.2",
      "datasource": "packagist",
      "depName": "doctrine/common",
      "depType": "require",
      "lookupName": "doctrine/common",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-bundle",
      "depType": "require",
      "lookupName": "doctrine/doctrine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "doctrine/doctrine-fixtures-bundle",
      "depType": "require",
      "lookupName": "doctrine/doctrine-fixtures-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.2.x-dev",
      "datasource": "packagist",
      "depName": "doctrine/orm",
      "depType": "require",
      "lookupName": "doctrine/orm",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "exercise/elastica-bundle",
      "depType": "require",
      "lookupName": "exercise/elastica-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "friendsofsymfony/rest-bundle",
      "depType": "require",
      "lookupName": "friendsofsymfony/rest-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "friendsofsymfony/user-bundle",
      "depType": "require",
      "lookupName": "friendsofsymfony/user-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "fzaninotto/faker",
      "depType": "require",
      "lookupName": "fzaninotto/faker",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.0.1",
      "datasource": "packagist",
      "depName": "jms/di-extra-bundle",
      "depType": "require",
      "lookupName": "jms/di-extra-bundle",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "jms/payment-core-bundle",
      "depType": "require",
      "lookupName": "jms/payment-core-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "1.1.0",
      "datasource": "packagist",
      "depName": "jms/security-extra-bundle",
      "depType": "require",
      "lookupName": "jms/security-extra-bundle",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-menu-bundle",
      "depType": "require",
      "lookupName": "knplabs/knp-menu-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "knplabs/knp-paginator-bundle",
      "depType": "require",
      "lookupName": "knplabs/knp-paginator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "liip/imagine-bundle",
      "depType": "require",
      "lookupName": "liip/imagine-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "merk/dough-bundle",
      "depType": "require",
      "lookupName": "merk/dough-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/distribution-bundle",
      "depType": "require",
      "lookupName": "sensio/distribution-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/framework-extra-bundle",
      "depType": "require",
      "lookupName": "sensio/framework-extra-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "sensio/generator-bundle",
      "depType": "require",
      "lookupName": "sensio/generator-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "simplethings/entity-audit-bundle",
      "depType": "require",
      "lookupName": "simplethings/entity-audit-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "stof/doctrine-extensions-bundle",
      "depType": "require",
      "lookupName": "stof/doctrine-extensions-bundle",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "dev-master",
      "datasource": "packagist",
      "depName": "twig/extensions",
      "depType": "require",
      "lookupName": "twig/extensions",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": "2.3.*",
      "datasource": "packagist",
      "depName": "behat/behat",
      "depType": "require-dev",
      "lookupName": "behat/behat",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/behat-bundle",
      "depType": "require-dev",
      "lookupName": "behat/behat-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/mink-bundle",
      "depType": "require-dev",
      "lookupName": "behat/mink-bundle",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/sahi-client",
      "depType": "require-dev",
      "lookupName": "behat/sahi-client",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "behat/common-contexts",
      "depType": "require-dev",
      "lookupName": "behat/common-contexts",
      "skipReason": "any-version",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts object registryUrls 1`] = `
Object {
  "composerJsonType": "project",
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": ">=5.5",
      "datasource": "packagist",
      "depName": "php",
      "depType": "require",
      "lookupName": "php",
      "skipReason": "unsupported",
    },
    Object {
      "currentValue": "~1.0.12",
      "datasource": "packagist",
      "depName": "composer/installers",
      "depType": "require",
      "lookupName": "composer/installers",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "johnpbloch/wordpress",
      "depType": "require",
      "lookupName": "johnpbloch/wordpress",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "^2.0.1",
      "datasource": "packagist",
      "depName": "vlucas/phpdotenv",
      "depType": "require",
      "lookupName": "vlucas/phpdotenv",
    },
    Object {
      "currentValue": "^1.0",
      "datasource": "packagist",
      "depName": "oscarotero/env",
      "depType": "require",
      "lookupName": "oscarotero/env",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/tinymce-advanced",
      "depType": "require",
      "lookupName": "wpackagist-plugin/tinymce-advanced",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/acf-content-analysis-for-yoast-seo",
      "depType": "require",
      "lookupName": "wpackagist-plugin/acf-content-analysis-for-yoast-seo",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/duplicate-post",
      "depType": "require",
      "lookupName": "wpackagist-plugin/duplicate-post",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/simple-image-sizes",
      "depType": "require",
      "lookupName": "wpackagist-plugin/simple-image-sizes",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/wordpress-seo",
      "depType": "require",
      "lookupName": "wpackagist-plugin/wordpress-seo",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/timber-library",
      "depType": "require",
      "lookupName": "wpackagist-plugin/timber-library",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wp-sync-db/wp-sync-db",
      "depType": "require",
      "lookupName": "wp-sync-db/wp-sync-db",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "asha23/wp-seed-timber",
      "depType": "require",
      "lookupName": "asha23/wp-seed-timber",
      "skipReason": "any-version",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
    Object {
      "package": Object {
        "dist": Object {
          "type": "zip",
          "url": "https://github.com/asha23/wp-seed-timber/archive/v1.2.6.zip",
        },
        "name": "asha23/wp-seed-timber",
        "type": "wordpress-theme",
        "version": "1.2.6",
      },
      "type": "package",
    },
    Object {
      "package": Object {
        "dist": Object {
          "type": "zip",
          "url": "https://github.com/corysimmons/wp-sync-db/archive/1.6.zip",
        },
        "name": "wp-sync-db/wp-sync-db",
        "type": "wordpress-plugin",
        "version": "1.5",
      },
      "type": "package",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts object repositories and registryUrls with lock file 1`] = `
Object {
  "composerLock": "composer.lock",
  "deps": Array [
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "aws/aws-sdk-php",
      "depType": "require",
      "lookupName": "aws/aws-sdk-php",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "dev-trunk",
      "datasource": "gitTags",
      "depName": "awesome/vcs",
      "depType": "require",
      "lockedVersion": "1.1.0",
      "lookupName": "https://my-vcs.example/my-vcs-repo",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": ">=7.0.2",
      "datasource": "gitTags",
      "depName": "awesome/git",
      "depType": "require",
      "lockedVersion": "1.2.0",
      "lookupName": "git@my-git.example:my-git-repo",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts registryUrls 1`] = `
Object {
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "aws/aws-sdk-php",
      "depType": "require",
      "lookupName": "aws/aws-sdk-php",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "dev-trunk",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/akismet",
      "depType": "require",
      "lookupName": "wpackagist-plugin/akismet",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": ">=7.0.2",
      "datasource": "packagist",
      "depName": "wpackagist-plugin/wordpress-seo",
      "depType": "require",
      "lookupName": "wpackagist-plugin/wordpress-seo",
    },
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "wpackagist-theme/hueman",
      "depType": "require",
      "lookupName": "wpackagist-theme/hueman",
      "skipReason": "any-version",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
  ],
}
`;

exports[`lib/manager/composer/extract extractPackageFile() extracts repositories and registryUrls 1`] = `
Object {
  "composerLock": false,
  "deps": Array [
    Object {
      "currentValue": "*",
      "datasource": "packagist",
      "depName": "aws/aws-sdk-php",
      "depType": "require",
      "lookupName": "aws/aws-sdk-php",
      "skipReason": "any-version",
    },
    Object {
      "currentValue": "dev-trunk",
      "datasource": "gitTags",
      "depName": "awesome/vcs",
      "depType": "require",
      "lookupName": "https://my-vcs.example/my-vcs-repo",
      "skipReason": "unsupported-constraint",
    },
    Object {
      "currentValue": ">=7.0.2",
      "datasource": "gitTags",
      "depName": "awesome/git",
      "depType": "require",
      "lookupName": "https://my-git.example/my-git-repo",
    },
  ],
  "registryUrls": Array [
    Object {
      "type": "composer",
      "url": "https://wpackagist.org",
    },
  ],
}
`;
